Move community assembly into remake workflow, patterns across
Have setup so that height at maturation has no effect
Site productivity is simply a multiple on max Area
Generating single species communities (disturbance = 5)
and mulit species communities (disturbance = 40)

Closes #5
Towards #6

--- a/remake.yml
+++ b/remake.yml
@@ -2,6 +2,7 @@ packages:
   - plant
   - rootSolve
   - rmarkdown
+  - RColorBrewer
 
 sources:
   - R
@@ -43,3 +44,28 @@ targets:
       - ms/amnat.bst
     command: latex_build("ms/ideas.tex", "ms/references.bib", clean=TRUE)
 
+  figures/lma_gradient_single.pdf:
+    command: lma_gradient_plot(assembly_lma_single_1, assembly_lma_single_2, assembly_lma_single_3)
+    plot: square
+
+  assembly_lma_single_1:
+    command: run_assembly(disturbance_mean_interval=5, site_prod=0.8)
+
+  assembly_lma_single_2:
+    command: run_assembly(disturbance_mean_interval=5, site_prod=1.0)
+
+  assembly_lma_single_3:
+    command: run_assembly(disturbance_mean_interval=5, site_prod=1.2)
+
+  figures/lma_gradient_multi.pdf:
+    command: lma_gradient_plot(assembly_lma_multi_1, assembly_lma_multi_2, assembly_lma_multi_3)
+    plot: square
+
+  assembly_lma_multi_1:
+    command: run_assembly(disturbance_mean_interval=40, site_prod=0.8)
+
+  assembly_lma_multi_2:
+    command: run_assembly(disturbance_mean_interval=40, site_prod=1.0)
+
+  assembly_lma_multi_3:
+    command: run_assembly(disturbance_mean_interval=40, site_prod=1.2)
