--- a/remake.yml
+++ b/remake.yml
@@ -45,9 +45,20 @@ targets:
       - ms/amnat.bst
     command: latex_build("ms/ideas.tex", "ms/references.bib", clean=TRUE)
 
+  figures:
+    depends:
+    - figures/lma_gradient_single.pdf
+    - figures/lma_gradient_multi.pdf:
+
   figures/lma_gradient_single.pdf:
     command: lma_gradient_plot(assembly_lma_single_1, assembly_lma_single_2, assembly_lma_single_3)
     plot: square
+
+  figures/lma_gradient_multi.pdf:
+    command: lma_gradient_plot(assembly_lma_multi_1, assembly_lma_multi_2, assembly_lma_multi_3)
+    plot: square
+
+
 
   assembly_lma_single_1:
     command: run_assembly(disturbance_mean_interval=5, site_prod=0.8)
@@ -57,10 +68,6 @@ targets:
 
   assembly_lma_single_3:
     command: run_assembly(disturbance_mean_interval=5, site_prod=1.2)
-
-  figures/lma_gradient_multi.pdf:
-    command: lma_gradient_plot(assembly_lma_multi_1, assembly_lma_multi_2, assembly_lma_multi_3)
-    plot: square
 
   assembly_lma_multi_1:
     command: run_assembly(disturbance_mean_interval=40, site_prod=0.8)
