Assembly results: don't check for code changes. Set cleanup_level

--- a/remake.yml
+++ b/remake.yml
@@ -58,22 +58,32 @@ targets:
     command: lma_gradient_plot(assembly_lma_multi_1, assembly_lma_multi_2, assembly_lma_multi_3)
     plot: square
 
-
-
   assembly_lma_single_1:
     command: run_assembly(disturbance_mean_interval=5, site_prod=0.8)
+    check: exists
+    cleanup_level: purge
 
   assembly_lma_single_2:
     command: run_assembly(disturbance_mean_interval=5, site_prod=1.0)
+    check: exists
+    cleanup_level: purge
 
   assembly_lma_single_3:
     command: run_assembly(disturbance_mean_interval=5, site_prod=1.2)
+    check: exists
+    cleanup_level: purge
 
   assembly_lma_multi_1:
     command: run_assembly(disturbance_mean_interval=40, site_prod=0.8)
+    check: exists
+    cleanup_level: purge
 
   assembly_lma_multi_2:
     command: run_assembly(disturbance_mean_interval=40, site_prod=1.0)
+    check: exists
+    cleanup_level: purge
 
   assembly_lma_multi_3:
     command: run_assembly(disturbance_mean_interval=40, site_prod=1.2)
+    check: exists
+    cleanup_level: purge
