Seperate file for literaure

--- a/remake.yml
+++ b/remake.yml
@@ -33,17 +33,19 @@ targets:
   all:
     depends:
       - ms/ideas.pdf
-
-  # NOTE: some issues getting dependencies to behave sensibly here
-  # (manuscript rebuilding when figures change but tex does not)
-  # figures:
-  #   depends:
+      - ms/literature.pdf
 
   ms/ideas.pdf:
     depends:
       - ms/ms.sty
       - ms/amnat.bst
     command: latex_build("ms/ideas.tex", "ms/references.bib", clean=TRUE)
+
+  ms/literature.pdf:
+    depends:
+      - ms/ms.sty
+      - ms/amnat.bst
+    command: latex_build("ms/literature.tex", "ms/references.bib", clean=TRUE)
 
   figures:
     depends:
