--- a/remake.yml
+++ b/remake.yml
@@ -52,6 +52,7 @@ targets:
   figures:
     depends:
     - figures/data_climate.pdf
+    - figures/data_lma_ll_trade_off.pdf
     - figures/lma_gradient_single.pdf
     - figures/lma_gradient_multi.pdf
 
@@ -64,6 +65,7 @@ targets:
   figures/lma_gradient_multi.pdf:
     command: lma_gradient_plot(assembly_lma_multi_1, assembly_lma_multi_2, assembly_lma_multi_3)
     plot: square
+
 
   assembly_lma_single_1:
     command: run_assembly(disturbance_mean_interval=5, site_prod=0.8)
@@ -101,7 +103,7 @@ targets:
     command: figure_lma_climate(leaf_traits)
     plot: large_square
 
-  figures/lma_ll_trade_off.pdf:
+  figures/data_lma_ll_trade_off.pdf:
     command: figure_lma_tradeoff(leaf_traits)
     plot: square
 
