start to explore Leaf N effect as in Wright et al. 2003

--- a/remake.yml
+++ b/remake.yml
@@ -105,6 +105,15 @@ targets:
     command: plot_trait_gradient(list_assembly_lma_multi_slope, I(vec_site_prod = c(-0.3, -0.2, -0.1, 0.0, 0.1, 0.2, 0.3) ))
     plot: square
 
+  figures/gradient_lma_single_narea.pdf:
+    command: plot_trait_gradient(list_assembly_lma_single_narea, I(vec_site_prod = c(-0.3, -0.2, -0.1, 0.0, 0.1, 0.2, 0.3)))
+    plot: square
+
+  figures/gradient_lma_multi_narea.pdf:
+    command: plot_trait_gradient(list_assembly_lma_multi_narea, I(vec_site_prod = c(-0.3, -0.2, -0.1, 0.0, 0.1, 0.2, 0.3) ))
+    plot: square
+
+
   list_assembly_lma_single:
     command: run_assembly_list(I(vec_site_prod = c(-0.3, -0.2, -0.1, 0.0, 0.1, 0.2, 0.3) ), disturbance_mean_interval = 5)
     check: exists
@@ -132,6 +141,16 @@ targets:
 
   list_assembly_lma_multi_slope:
     command: run_assembly_list(I(vec_site_prod = c(-0.3, -0.2, -0.1, 0.0, 0.1, 0.2, 0.3) ), I(FUN = run_assembly_slope), disturbance_mean_interval = 40)
+    check: exists
+    cleanup_level: purge
+
+  list_assembly_lma_single_narea:
+    command: run_assembly_list(I(vec_site_prod = c(-0.3, -0.2, -0.1, 0.0, 0.1, 0.2, 0.3) ), I(FUN = run_assembly_narea), disturbance_mean_interval = 5)
+    check: exists
+    cleanup_level: purge
+
+  list_assembly_lma_multi_narea:
+    command: run_assembly_list(I(vec_site_prod = c(-0.3, -0.2, -0.1, 0.0, 0.1, 0.2, 0.3) ), I(FUN = run_assembly_narea), disturbance_mean_interval = 40)
     check: exists
     cleanup_level: purge
 
